--- a/index.html
+++ b/index.html
@@ -6,56 +6,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a>Header Logo</a>
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <nav>
+            <a class="logo">Header Logo</a>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It´s a smaller font and the color is lower contrast</p>
-        <button class="signup-button-hero">Sign up</button>
-        <div>
-            <img class="hero-img">
-        </div>
-    </div>
-    <div class="info">
-        <h2>Some random information.</h2>
-        <div class="cards">
-            <img class="card-img">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="cards">
-            <img class="card-img">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="cards">
-            <img class="card-img">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="cards">
-            <img class="card-img">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-    </div>
-    <div>
-        <p class="quote">This is an inspiring quote, or a testimonial from customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
-        <p class="thor">-Thor, God of Thunder</p>
-    </div>
-    <div>
-        <div class="call-to-action">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there</p>
-            <div class="signup-button-banner">
-                <button>Sign up</button>
+    <div class="hero-container">
+        <div class="hero">
+            <div class="left">
+            <h1>This website is awesome</h1>
+            <p class="hero-para">This website has some subtext that goes here under the main title. It´s a smaller font and the color is lower contrast</p>
+            <button class="signup-button-hero">Sign up</button>
+            </div>
+            <div class="right">
+                <div class="hero-img">This is  a placeholder for an image</div>
             </div>
         </div>
     </div>
+
+    <!-- Section 2 -->
+    <h2>Some random information.</h2>
+    <div class="card-container">
+        <div class="cards">
+            <div class="card">
+                <img class="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img class="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img class="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img class="card-img">
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </img>
+            </div>
+        </div>
+    </div>
+    <div>
+
+    <!-- Section 3 -->
+    <div class="quote-container">
+        <p class="quote"><em>This is an inspiring quote, or a testimonial from customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</em></p>
+        <p class="thor">-Thor, God of Thunder</p>
+    </div>
+
+    <!-- Section 4 -->
+
+    <div class="cta-container">
+        <div class="call-to-action">
+            <div class="left-cta">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <div class="right-cta">
+                <button class="signup-button-banner">Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+
     <footer>
         <p>Copyright &#169; The Odin Project 2021</p>
     </footer>
